// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeServer should properly thread props to child BrNodeServer components 1`] = `<div />`;

exports[`BrNodeServer should render a component 1`] = `<DocumentFragment />`;

exports[`BrNodeServer should render a container 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`BrNodeServer should render a container item 1`] = `
<DocumentFragment>
  <div>
    Component "undefined" is not defined.
  </div>
</DocumentFragment>
`;

exports[`BrNodeServer should render children if present 1`] = `
<DocumentFragment>
  <a />
  <b />
</DocumentFragment>
`;

exports[`BrNodeServer should render model children if component children are not present 1`] = `<DocumentFragment />`;
